# jupyflow

./: .env.example  .gitignore  :w  Dockerfile  package-lock.json  playbook.yml  pyproject.toml  requirements.txt
ansible/: Dockerfile  haproxy.cfg.j2  manager.py  playbook.yml  setup.py
ansible/base_files/: Dockerfile  haproxy.cfg.j2  jupyterhub_config.py
ansible/playbooks/: container_playbook.yml  delete_container_playbook.yml  healthcheck_playbook.yml  playbook.yml  upload_file_playbook.yml  usuario_playbook.yml
ansible/playbooks/documentos/: create_folder.yml
base/: settings.py  urls.py
documento/: forms.py  models.py  urls.py  utils.py  views.py
documento/migrations/: 0001_initial.py  0002_diretorio.py  0003_alter_diretorio_container.py  0004_documento_diretorio.py  0005_remove_documento_diretorio_remove_documento_turma.py  0006_remove_documento_documento_documento_caminho.py
documento/templates/documento/: documentos_create.html
google_api/: api.py
templates/base/: base.html
turmas/: forms.py  models.py  urls.py  views.py
turmas/management/commands/: runapscheduler.py
turmas/migrations/: 0001_initial.py  0002_alter_turma_tag_turma.py  0003_containerturma_remove_turma_tag_turma_and_more.py  0004_containerturma_ansible_log.py  0005_alter_containerturma_ativo.py  0006_aluno_ultimaporta_remove_turma_alunos_and_more.py  0007_alter_aluno_senha.py  0008_aluno_turma.py  0009_documento.py  0010_remove_containerturma_ansible_log_and_more.py  0011_delete_documento.py  0012_alter_turma_container.py
usuario/: forms.py  urls.py  views.py
(+10 files in other folders)
