[tool.poetry]
name = "jupyflow"
version = "0.1.0"
description = ""
authors = ["Romeu Borges <romeuborges19@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
django = "^5.1"
ansible = "^10.2.0"
ansible-runner = "^2.4.0"
google-api-python-client = "^2.140.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.1"
apscheduler = "^3.10.4"
taskipy = "^1.13.0"
python-decouple = "^3.8"
django-apscheduler = "^0.6.2"
psycopg2-binary = "^2.9.9"
paramiko = "^3.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
run = "python manage.py runserver"
watch = "python manage.py runapscheduler"
migrate = "python manage.py makemigrations && python manage.py migrate"
